src/expresiones.output
Terminals unused in grammar

   IDENTIFICADOR


State 99 conflicts: 1 shift/reduce


Grammar

    0 $accept: SHoLProgram $end

    1 SHoLProgram: definitionZone SEPARATOR dataZone SEPARATOR behaviourZone

    2 definitionZone: %empty
    3               | definitionZone definition
    4               | definitionZone declaration
    5               | definitionZone assignment
    6               | definitionZone plano

    7 plano: PLANO '=' '{' planoFirstPoint ',' planoPoints '}' ';'

    8 planoPoints: planoPoint
    9            | planoPoints ',' planoPoint

   10 planoPoint: VARIABLE
   11           | '<' arithmeticExpression ',' arithmeticExpression '>'

   12 planoFirstPoint: VARIABLE
   13                | '<' arithmeticExpression ',' arithmeticExpression '>'

   14 definition: DEFINITIONSENSOR VARIABLE sensorOrActuator '<' ENTERO ',' ENTERO '>' ';'
   15           | DEFINITIONACTUATOR VARIABLE sensorOrActuator '<' ENTERO ',' ENTERO '>' ';'
   16           | DEFINITIONSENSOR VARIABLE sensorOrActuator VARIABLE ';'
   17           | DEFINITIONACTUATOR VARIABLE sensorOrActuator VARIABLE ';'

   18 sensorOrActuator: SENSORTEMPERATURE
   19                 | SENSORBRIGHTNESS
   20                 | SENSORSMOKE
   21                 | ACTUATORALARM
   22                 | ACTUATORLIGHT

   23 dataZone: dataSet

   24 dataSet: %empty
   25        | dataSet data

   26 data: VARIABLE REAL ';'
   27     | VARIABLE ENTERO ';'

   28 behaviourZone: %empty
   29              | behaviourZone behaviour
   30              | behaviourZone assignment
   31              | behaviourZone actions

   32 behaviour: IF condition '[' behaviourZone ']' ';'
   33          | IF condition '[' behaviourZone ']' _else '[' behaviourZone ']' ';'
   34          | _while repeat '[' behaviourZone ']' ';'

   35 _else: ELSE

   36 _while: WHILE

   37 condition: logicExpression

   38 repeat: ENTERO

   39 actions: action ';'

   40 action: ACTIVATE VARIABLE ENTERO
   41       | ACTIVATE VARIABLE
   42       | DESACTIVATE VARIABLE
   43       | PAUSE ENTERO
   44       | WRITE text
   45       | WRITE '<' arithmeticExpression ',' arithmeticExpression '>' text
   46       | WRITE VARIABLE text

   47 text: TEXT
   48     | arithmeticExpression

   49 declaration: DEFINITIONINTEGER variables ';'
   50            | DEFINITIONREAL variables ';'
   51            | DEFINITIONPOSITION variables ';'

   52 variables: VARIABLE
   53          | variables ',' VARIABLE

   54 assignment: VARIABLE '=' arithmeticExpression ';'
   55           | VARIABLE '=' '<' arithmeticExpression ',' arithmeticExpression '>' ';'

   56 arithmeticExpression: ENTERO
   57                     | REAL
   58                     | VARIABLE
   59                     | '-' arithmeticExpression
   60                     | '(' arithmeticExpression ')'
   61                     | arithmeticExpression '+' arithmeticExpression
   62                     | arithmeticExpression '-' arithmeticExpression
   63                     | arithmeticExpression '*' arithmeticExpression
   64                     | arithmeticExpression '/' arithmeticExpression
   65                     | arithmeticExpression '%' arithmeticExpression
   66                     | arithmeticExpression '^' arithmeticExpression

   67 logicExpression: arithmeticExpression EQUALS arithmeticExpression
   68                | arithmeticExpression NOTEQUALS arithmeticExpression
   69                | arithmeticExpression GREATEROREQUAL arithmeticExpression
   70                | arithmeticExpression LOWEROREQUAL arithmeticExpression
   71                | arithmeticExpression '>' arithmeticExpression
   72                | arithmeticExpression '<' arithmeticExpression


Terminals, with rules where they appear

$end (0) 0
'%' (37) 65
'(' (40) 60
')' (41) 60
'*' (42) 63
'+' (43) 61
',' (44) 7 9 11 13 14 15 45 53 55
'-' (45) 59 62
'/' (47) 64
';' (59) 7 14 15 16 17 26 27 32 33 34 39 49 50 51 54 55
'<' (60) 11 13 14 15 45 55 72
'=' (61) 7 54 55
'>' (62) 11 13 14 15 45 55 71
'[' (91) 32 33 34
']' (93) 32 33 34
'^' (94) 66
'{' (123) 7
'}' (125) 7
error (256)
EQUALS (258) 67
LOWEROREQUAL (259) 70
GREATEROREQUAL (260) 69
NOTEQUALS (261) 68
SEPARATOR (262) 1
VARIABLE (263) 10 12 14 15 16 17 26 27 40 41 42 46 52 53 54 55 58
TEXT (264) 47
ENTERO (265) 14 15 27 38 40 43 56
REAL (266) 26 57
IDENTIFICADOR (267)
PLANO (268) 7
DEFINITIONSENSOR (269) 14 16
DEFINITIONACTUATOR (270) 15 17
SENSORTEMPERATURE (271) 18
SENSORBRIGHTNESS (272) 19
SENSORSMOKE (273) 20
ACTUATORALARM (274) 21
ACTUATORLIGHT (275) 22
ACTIVATE (276) 40 41
DESACTIVATE (277) 42
PAUSE (278) 43
WRITE (279) 44 45 46
DEFINITIONINTEGER (280) 49
DEFINITIONREAL (281) 50
DEFINITIONPOSITION (282) 51
IF (283) 32 33
ELSE (284) 35
WHILE (285) 36
menosunario (286)


Nonterminals, with rules where they appear

$accept (49)
    on left: 0
SHoLProgram (50)
    on left: 1, on right: 0
definitionZone (51)
    on left: 2 3 4 5 6, on right: 1 3 4 5 6
plano (52)
    on left: 7, on right: 6
planoPoints (53)
    on left: 8 9, on right: 7 9
planoPoint (54)
    on left: 10 11, on right: 8 9
planoFirstPoint (55)
    on left: 12 13, on right: 7
definition (56)
    on left: 14 15 16 17, on right: 3
sensorOrActuator (57)
    on left: 18 19 20 21 22, on right: 14 15 16 17
dataZone (58)
    on left: 23, on right: 1
dataSet (59)
    on left: 24 25, on right: 23 25
data (60)
    on left: 26 27, on right: 25
behaviourZone (61)
    on left: 28 29 30 31, on right: 1 29 30 31 32 33 34
behaviour (62)
    on left: 32 33 34, on right: 29
_else (63)
    on left: 35, on right: 33
_while (64)
    on left: 36, on right: 34
condition (65)
    on left: 37, on right: 32 33
repeat (66)
    on left: 38, on right: 34
actions (67)
    on left: 39, on right: 31
action (68)
    on left: 40 41 42 43 44 45 46, on right: 39
text (69)
    on left: 47 48, on right: 44 45 46
declaration (70)
    on left: 49 50 51, on right: 4
variables (71)
    on left: 52 53, on right: 49 50 51 53
assignment (72)
    on left: 54 55, on right: 5 30
arithmeticExpression (73)
    on left: 56 57 58 59 60 61 62 63 64 65 66, on right: 11 13 45 48
    54 55 59 60 61 62 63 64 65 66 67 68 69 70 71 72
logicExpression (74)
    on left: 67 68 69 70 71 72, on right: 37


State 0

    0 $accept: . SHoLProgram $end

    $default  reduce using rule 2 (definitionZone)

    SHoLProgram     go to state 1
    definitionZone  go to state 2


State 1

    0 $accept: SHoLProgram . $end

    $end  shift, and go to state 3


State 2

    1 SHoLProgram: definitionZone . SEPARATOR dataZone SEPARATOR behaviourZone
    3 definitionZone: definitionZone . definition
    4               | definitionZone . declaration
    5               | definitionZone . assignment
    6               | definitionZone . plano

    SEPARATOR           shift, and go to state 4
    VARIABLE            shift, and go to state 5
    PLANO               shift, and go to state 6
    DEFINITIONSENSOR    shift, and go to state 7
    DEFINITIONACTUATOR  shift, and go to state 8
    DEFINITIONINTEGER   shift, and go to state 9
    DEFINITIONREAL      shift, and go to state 10
    DEFINITIONPOSITION  shift, and go to state 11

    plano        go to state 12
    definition   go to state 13
    declaration  go to state 14
    assignment   go to state 15


State 3

    0 $accept: SHoLProgram $end .

    $default  accept


State 4

    1 SHoLProgram: definitionZone SEPARATOR . dataZone SEPARATOR behaviourZone

    $default  reduce using rule 24 (dataSet)

    dataZone  go to state 16
    dataSet   go to state 17


State 5

   54 assignment: VARIABLE . '=' arithmeticExpression ';'
   55           | VARIABLE . '=' '<' arithmeticExpression ',' arithmeticExpression '>' ';'

    '='  shift, and go to state 18


State 6

    7 plano: PLANO . '=' '{' planoFirstPoint ',' planoPoints '}' ';'

    '='  shift, and go to state 19


State 7

   14 definition: DEFINITIONSENSOR . VARIABLE sensorOrActuator '<' ENTERO ',' ENTERO '>' ';'
   16           | DEFINITIONSENSOR . VARIABLE sensorOrActuator VARIABLE ';'

    VARIABLE  shift, and go to state 20


State 8

   15 definition: DEFINITIONACTUATOR . VARIABLE sensorOrActuator '<' ENTERO ',' ENTERO '>' ';'
   17           | DEFINITIONACTUATOR . VARIABLE sensorOrActuator VARIABLE ';'

    VARIABLE  shift, and go to state 21


State 9

   49 declaration: DEFINITIONINTEGER . variables ';'

    VARIABLE  shift, and go to state 22

    variables  go to state 23


State 10

   50 declaration: DEFINITIONREAL . variables ';'

    VARIABLE  shift, and go to state 22

    variables  go to state 24


State 11

   51 declaration: DEFINITIONPOSITION . variables ';'

    VARIABLE  shift, and go to state 22

    variables  go to state 25


State 12

    6 definitionZone: definitionZone plano .

    $default  reduce using rule 6 (definitionZone)


State 13

    3 definitionZone: definitionZone definition .

    $default  reduce using rule 3 (definitionZone)


State 14

    4 definitionZone: definitionZone declaration .

    $default  reduce using rule 4 (definitionZone)


State 15

    5 definitionZone: definitionZone assignment .

    $default  reduce using rule 5 (definitionZone)


State 16

    1 SHoLProgram: definitionZone SEPARATOR dataZone . SEPARATOR behaviourZone

    SEPARATOR  shift, and go to state 26


State 17

   23 dataZone: dataSet .
   25 dataSet: dataSet . data

    VARIABLE  shift, and go to state 27

    $default  reduce using rule 23 (dataZone)

    data  go to state 28


State 18

   54 assignment: VARIABLE '=' . arithmeticExpression ';'
   55           | VARIABLE '=' . '<' arithmeticExpression ',' arithmeticExpression '>' ';'

    VARIABLE  shift, and go to state 29
    ENTERO    shift, and go to state 30
    REAL      shift, and go to state 31
    '<'       shift, and go to state 32
    '-'       shift, and go to state 33
    '('       shift, and go to state 34

    arithmeticExpression  go to state 35


State 19

    7 plano: PLANO '=' . '{' planoFirstPoint ',' planoPoints '}' ';'

    '{'  shift, and go to state 36


State 20

   14 definition: DEFINITIONSENSOR VARIABLE . sensorOrActuator '<' ENTERO ',' ENTERO '>' ';'
   16           | DEFINITIONSENSOR VARIABLE . sensorOrActuator VARIABLE ';'

    SENSORTEMPERATURE  shift, and go to state 37
    SENSORBRIGHTNESS   shift, and go to state 38
    SENSORSMOKE        shift, and go to state 39
    ACTUATORALARM      shift, and go to state 40
    ACTUATORLIGHT      shift, and go to state 41

    sensorOrActuator  go to state 42


State 21

   15 definition: DEFINITIONACTUATOR VARIABLE . sensorOrActuator '<' ENTERO ',' ENTERO '>' ';'
   17           | DEFINITIONACTUATOR VARIABLE . sensorOrActuator VARIABLE ';'

    SENSORTEMPERATURE  shift, and go to state 37
    SENSORBRIGHTNESS   shift, and go to state 38
    SENSORSMOKE        shift, and go to state 39
    ACTUATORALARM      shift, and go to state 40
    ACTUATORLIGHT      shift, and go to state 41

    sensorOrActuator  go to state 43


State 22

   52 variables: VARIABLE .

    $default  reduce using rule 52 (variables)


State 23

   49 declaration: DEFINITIONINTEGER variables . ';'
   53 variables: variables . ',' VARIABLE

    ','  shift, and go to state 44
    ';'  shift, and go to state 45


State 24

   50 declaration: DEFINITIONREAL variables . ';'
   53 variables: variables . ',' VARIABLE

    ','  shift, and go to state 44
    ';'  shift, and go to state 46


State 25

   51 declaration: DEFINITIONPOSITION variables . ';'
   53 variables: variables . ',' VARIABLE

    ','  shift, and go to state 44
    ';'  shift, and go to state 47


State 26

    1 SHoLProgram: definitionZone SEPARATOR dataZone SEPARATOR . behaviourZone

    $default  reduce using rule 28 (behaviourZone)

    behaviourZone  go to state 48


State 27

   26 data: VARIABLE . REAL ';'
   27     | VARIABLE . ENTERO ';'

    ENTERO  shift, and go to state 49
    REAL    shift, and go to state 50


State 28

   25 dataSet: dataSet data .

    $default  reduce using rule 25 (dataSet)


State 29

   58 arithmeticExpression: VARIABLE .

    $default  reduce using rule 58 (arithmeticExpression)


State 30

   56 arithmeticExpression: ENTERO .

    $default  reduce using rule 56 (arithmeticExpression)


State 31

   57 arithmeticExpression: REAL .

    $default  reduce using rule 57 (arithmeticExpression)


State 32

   55 assignment: VARIABLE '=' '<' . arithmeticExpression ',' arithmeticExpression '>' ';'

    VARIABLE  shift, and go to state 29
    ENTERO    shift, and go to state 30
    REAL      shift, and go to state 31
    '-'       shift, and go to state 33
    '('       shift, and go to state 34

    arithmeticExpression  go to state 51


State 33

   59 arithmeticExpression: '-' . arithmeticExpression

    VARIABLE  shift, and go to state 29
    ENTERO    shift, and go to state 30
    REAL      shift, and go to state 31
    '-'       shift, and go to state 33
    '('       shift, and go to state 34

    arithmeticExpression  go to state 52


State 34

   60 arithmeticExpression: '(' . arithmeticExpression ')'

    VARIABLE  shift, and go to state 29
    ENTERO    shift, and go to state 30
    REAL      shift, and go to state 31
    '-'       shift, and go to state 33
    '('       shift, and go to state 34

    arithmeticExpression  go to state 53


State 35

   54 assignment: VARIABLE '=' arithmeticExpression . ';'
   61 arithmeticExpression: arithmeticExpression . '+' arithmeticExpression
   62                     | arithmeticExpression . '-' arithmeticExpression
   63                     | arithmeticExpression . '*' arithmeticExpression
   64                     | arithmeticExpression . '/' arithmeticExpression
   65                     | arithmeticExpression . '%' arithmeticExpression
   66                     | arithmeticExpression . '^' arithmeticExpression

    '+'  shift, and go to state 54
    '-'  shift, and go to state 55
    '*'  shift, and go to state 56
    '/'  shift, and go to state 57
    '%'  shift, and go to state 58
    '^'  shift, and go to state 59
    ';'  shift, and go to state 60


State 36

    7 plano: PLANO '=' '{' . planoFirstPoint ',' planoPoints '}' ';'

    VARIABLE  shift, and go to state 61
    '<'       shift, and go to state 62

    planoFirstPoint  go to state 63


State 37

   18 sensorOrActuator: SENSORTEMPERATURE .

    $default  reduce using rule 18 (sensorOrActuator)


State 38

   19 sensorOrActuator: SENSORBRIGHTNESS .

    $default  reduce using rule 19 (sensorOrActuator)


State 39

   20 sensorOrActuator: SENSORSMOKE .

    $default  reduce using rule 20 (sensorOrActuator)


State 40

   21 sensorOrActuator: ACTUATORALARM .

    $default  reduce using rule 21 (sensorOrActuator)


State 41

   22 sensorOrActuator: ACTUATORLIGHT .

    $default  reduce using rule 22 (sensorOrActuator)


State 42

   14 definition: DEFINITIONSENSOR VARIABLE sensorOrActuator . '<' ENTERO ',' ENTERO '>' ';'
   16           | DEFINITIONSENSOR VARIABLE sensorOrActuator . VARIABLE ';'

    VARIABLE  shift, and go to state 64
    '<'       shift, and go to state 65


State 43

   15 definition: DEFINITIONACTUATOR VARIABLE sensorOrActuator . '<' ENTERO ',' ENTERO '>' ';'
   17           | DEFINITIONACTUATOR VARIABLE sensorOrActuator . VARIABLE ';'

    VARIABLE  shift, and go to state 66
    '<'       shift, and go to state 67


State 44

   53 variables: variables ',' . VARIABLE

    VARIABLE  shift, and go to state 68


State 45

   49 declaration: DEFINITIONINTEGER variables ';' .

    $default  reduce using rule 49 (declaration)


State 46

   50 declaration: DEFINITIONREAL variables ';' .

    $default  reduce using rule 50 (declaration)


State 47

   51 declaration: DEFINITIONPOSITION variables ';' .

    $default  reduce using rule 51 (declaration)


State 48

    1 SHoLProgram: definitionZone SEPARATOR dataZone SEPARATOR behaviourZone .
   29 behaviourZone: behaviourZone . behaviour
   30              | behaviourZone . assignment
   31              | behaviourZone . actions

    VARIABLE     shift, and go to state 5
    ACTIVATE     shift, and go to state 69
    DESACTIVATE  shift, and go to state 70
    PAUSE        shift, and go to state 71
    WRITE        shift, and go to state 72
    IF           shift, and go to state 73
    WHILE        shift, and go to state 74

    $default  reduce using rule 1 (SHoLProgram)

    behaviour   go to state 75
    _while      go to state 76
    actions     go to state 77
    action      go to state 78
    assignment  go to state 79


State 49

   27 data: VARIABLE ENTERO . ';'

    ';'  shift, and go to state 80


State 50

   26 data: VARIABLE REAL . ';'

    ';'  shift, and go to state 81


State 51

   55 assignment: VARIABLE '=' '<' arithmeticExpression . ',' arithmeticExpression '>' ';'
   61 arithmeticExpression: arithmeticExpression . '+' arithmeticExpression
   62                     | arithmeticExpression . '-' arithmeticExpression
   63                     | arithmeticExpression . '*' arithmeticExpression
   64                     | arithmeticExpression . '/' arithmeticExpression
   65                     | arithmeticExpression . '%' arithmeticExpression
   66                     | arithmeticExpression . '^' arithmeticExpression

    '+'  shift, and go to state 54
    '-'  shift, and go to state 55
    '*'  shift, and go to state 56
    '/'  shift, and go to state 57
    '%'  shift, and go to state 58
    '^'  shift, and go to state 59
    ','  shift, and go to state 82


State 52

   59 arithmeticExpression: '-' arithmeticExpression .
   61                     | arithmeticExpression . '+' arithmeticExpression
   62                     | arithmeticExpression . '-' arithmeticExpression
   63                     | arithmeticExpression . '*' arithmeticExpression
   64                     | arithmeticExpression . '/' arithmeticExpression
   65                     | arithmeticExpression . '%' arithmeticExpression
   66                     | arithmeticExpression . '^' arithmeticExpression

    '^'  shift, and go to state 59

    $default  reduce using rule 59 (arithmeticExpression)


State 53

   60 arithmeticExpression: '(' arithmeticExpression . ')'
   61                     | arithmeticExpression . '+' arithmeticExpression
   62                     | arithmeticExpression . '-' arithmeticExpression
   63                     | arithmeticExpression . '*' arithmeticExpression
   64                     | arithmeticExpression . '/' arithmeticExpression
   65                     | arithmeticExpression . '%' arithmeticExpression
   66                     | arithmeticExpression . '^' arithmeticExpression

    '+'  shift, and go to state 54
    '-'  shift, and go to state 55
    '*'  shift, and go to state 56
    '/'  shift, and go to state 57
    '%'  shift, and go to state 58
    '^'  shift, and go to state 59
    ')'  shift, and go to state 83


State 54

   61 arithmeticExpression: arithmeticExpression '+' . arithmeticExpression

    VARIABLE  shift, and go to state 29
    ENTERO    shift, and go to state 30
    REAL      shift, and go to state 31
    '-'       shift, and go to state 33
    '('       shift, and go to state 34

    arithmeticExpression  go to state 84


State 55

   62 arithmeticExpression: arithmeticExpression '-' . arithmeticExpression

    VARIABLE  shift, and go to state 29
    ENTERO    shift, and go to state 30
    REAL      shift, and go to state 31
    '-'       shift, and go to state 33
    '('       shift, and go to state 34

    arithmeticExpression  go to state 85


State 56

   63 arithmeticExpression: arithmeticExpression '*' . arithmeticExpression

    VARIABLE  shift, and go to state 29
    ENTERO    shift, and go to state 30
    REAL      shift, and go to state 31
    '-'       shift, and go to state 33
    '('       shift, and go to state 34

    arithmeticExpression  go to state 86


State 57

   64 arithmeticExpression: arithmeticExpression '/' . arithmeticExpression

    VARIABLE  shift, and go to state 29
    ENTERO    shift, and go to state 30
    REAL      shift, and go to state 31
    '-'       shift, and go to state 33
    '('       shift, and go to state 34

    arithmeticExpression  go to state 87


State 58

   65 arithmeticExpression: arithmeticExpression '%' . arithmeticExpression

    VARIABLE  shift, and go to state 29
    ENTERO    shift, and go to state 30
    REAL      shift, and go to state 31
    '-'       shift, and go to state 33
    '('       shift, and go to state 34

    arithmeticExpression  go to state 88


State 59

   66 arithmeticExpression: arithmeticExpression '^' . arithmeticExpression

    VARIABLE  shift, and go to state 29
    ENTERO    shift, and go to state 30
    REAL      shift, and go to state 31
    '-'       shift, and go to state 33
    '('       shift, and go to state 34

    arithmeticExpression  go to state 89


State 60

   54 assignment: VARIABLE '=' arithmeticExpression ';' .

    $default  reduce using rule 54 (assignment)


State 61

   12 planoFirstPoint: VARIABLE .

    $default  reduce using rule 12 (planoFirstPoint)


State 62

   13 planoFirstPoint: '<' . arithmeticExpression ',' arithmeticExpression '>'

    VARIABLE  shift, and go to state 29
    ENTERO    shift, and go to state 30
    REAL      shift, and go to state 31
    '-'       shift, and go to state 33
    '('       shift, and go to state 34

    arithmeticExpression  go to state 90


State 63

    7 plano: PLANO '=' '{' planoFirstPoint . ',' planoPoints '}' ';'

    ','  shift, and go to state 91


State 64

   16 definition: DEFINITIONSENSOR VARIABLE sensorOrActuator VARIABLE . ';'

    ';'  shift, and go to state 92


State 65

   14 definition: DEFINITIONSENSOR VARIABLE sensorOrActuator '<' . ENTERO ',' ENTERO '>' ';'

    ENTERO  shift, and go to state 93


State 66

   17 definition: DEFINITIONACTUATOR VARIABLE sensorOrActuator VARIABLE . ';'

    ';'  shift, and go to state 94


State 67

   15 definition: DEFINITIONACTUATOR VARIABLE sensorOrActuator '<' . ENTERO ',' ENTERO '>' ';'

    ENTERO  shift, and go to state 95


State 68

   53 variables: variables ',' VARIABLE .

    $default  reduce using rule 53 (variables)


State 69

   40 action: ACTIVATE . VARIABLE ENTERO
   41       | ACTIVATE . VARIABLE

    VARIABLE  shift, and go to state 96


State 70

   42 action: DESACTIVATE . VARIABLE

    VARIABLE  shift, and go to state 97


State 71

   43 action: PAUSE . ENTERO

    ENTERO  shift, and go to state 98


State 72

   44 action: WRITE . text
   45       | WRITE . '<' arithmeticExpression ',' arithmeticExpression '>' text
   46       | WRITE . VARIABLE text

    VARIABLE  shift, and go to state 99
    TEXT      shift, and go to state 100
    ENTERO    shift, and go to state 30
    REAL      shift, and go to state 31
    '<'       shift, and go to state 101
    '-'       shift, and go to state 33
    '('       shift, and go to state 34

    text                  go to state 102
    arithmeticExpression  go to state 103


State 73

   32 behaviour: IF . condition '[' behaviourZone ']' ';'
   33          | IF . condition '[' behaviourZone ']' _else '[' behaviourZone ']' ';'

    VARIABLE  shift, and go to state 29
    ENTERO    shift, and go to state 30
    REAL      shift, and go to state 31
    '-'       shift, and go to state 33
    '('       shift, and go to state 34

    condition             go to state 104
    arithmeticExpression  go to state 105
    logicExpression       go to state 106


State 74

   36 _while: WHILE .

    $default  reduce using rule 36 (_while)


State 75

   29 behaviourZone: behaviourZone behaviour .

    $default  reduce using rule 29 (behaviourZone)


State 76

   34 behaviour: _while . repeat '[' behaviourZone ']' ';'

    ENTERO  shift, and go to state 107

    repeat  go to state 108


State 77

   31 behaviourZone: behaviourZone actions .

    $default  reduce using rule 31 (behaviourZone)


State 78

   39 actions: action . ';'

    ';'  shift, and go to state 109


State 79

   30 behaviourZone: behaviourZone assignment .

    $default  reduce using rule 30 (behaviourZone)


State 80

   27 data: VARIABLE ENTERO ';' .

    $default  reduce using rule 27 (data)


State 81

   26 data: VARIABLE REAL ';' .

    $default  reduce using rule 26 (data)


State 82

   55 assignment: VARIABLE '=' '<' arithmeticExpression ',' . arithmeticExpression '>' ';'

    VARIABLE  shift, and go to state 29
    ENTERO    shift, and go to state 30
    REAL      shift, and go to state 31
    '-'       shift, and go to state 33
    '('       shift, and go to state 34

    arithmeticExpression  go to state 110


State 83

   60 arithmeticExpression: '(' arithmeticExpression ')' .

    $default  reduce using rule 60 (arithmeticExpression)


State 84

   61 arithmeticExpression: arithmeticExpression . '+' arithmeticExpression
   61                     | arithmeticExpression '+' arithmeticExpression .
   62                     | arithmeticExpression . '-' arithmeticExpression
   63                     | arithmeticExpression . '*' arithmeticExpression
   64                     | arithmeticExpression . '/' arithmeticExpression
   65                     | arithmeticExpression . '%' arithmeticExpression
   66                     | arithmeticExpression . '^' arithmeticExpression

    '*'  shift, and go to state 56
    '/'  shift, and go to state 57
    '%'  shift, and go to state 58
    '^'  shift, and go to state 59

    $default  reduce using rule 61 (arithmeticExpression)


State 85

   61 arithmeticExpression: arithmeticExpression . '+' arithmeticExpression
   62                     | arithmeticExpression . '-' arithmeticExpression
   62                     | arithmeticExpression '-' arithmeticExpression .
   63                     | arithmeticExpression . '*' arithmeticExpression
   64                     | arithmeticExpression . '/' arithmeticExpression
   65                     | arithmeticExpression . '%' arithmeticExpression
   66                     | arithmeticExpression . '^' arithmeticExpression

    '*'  shift, and go to state 56
    '/'  shift, and go to state 57
    '%'  shift, and go to state 58
    '^'  shift, and go to state 59

    $default  reduce using rule 62 (arithmeticExpression)


State 86

   61 arithmeticExpression: arithmeticExpression . '+' arithmeticExpression
   62                     | arithmeticExpression . '-' arithmeticExpression
   63                     | arithmeticExpression . '*' arithmeticExpression
   63                     | arithmeticExpression '*' arithmeticExpression .
   64                     | arithmeticExpression . '/' arithmeticExpression
   65                     | arithmeticExpression . '%' arithmeticExpression
   66                     | arithmeticExpression . '^' arithmeticExpression

    '^'  shift, and go to state 59

    $default  reduce using rule 63 (arithmeticExpression)


State 87

   61 arithmeticExpression: arithmeticExpression . '+' arithmeticExpression
   62                     | arithmeticExpression . '-' arithmeticExpression
   63                     | arithmeticExpression . '*' arithmeticExpression
   64                     | arithmeticExpression . '/' arithmeticExpression
   64                     | arithmeticExpression '/' arithmeticExpression .
   65                     | arithmeticExpression . '%' arithmeticExpression
   66                     | arithmeticExpression . '^' arithmeticExpression

    '^'  shift, and go to state 59

    $default  reduce using rule 64 (arithmeticExpression)


State 88

   61 arithmeticExpression: arithmeticExpression . '+' arithmeticExpression
   62                     | arithmeticExpression . '-' arithmeticExpression
   63                     | arithmeticExpression . '*' arithmeticExpression
   64                     | arithmeticExpression . '/' arithmeticExpression
   65                     | arithmeticExpression . '%' arithmeticExpression
   65                     | arithmeticExpression '%' arithmeticExpression .
   66                     | arithmeticExpression . '^' arithmeticExpression

    '^'  shift, and go to state 59

    $default  reduce using rule 65 (arithmeticExpression)


State 89

   61 arithmeticExpression: arithmeticExpression . '+' arithmeticExpression
   62                     | arithmeticExpression . '-' arithmeticExpression
   63                     | arithmeticExpression . '*' arithmeticExpression
   64                     | arithmeticExpression . '/' arithmeticExpression
   65                     | arithmeticExpression . '%' arithmeticExpression
   66                     | arithmeticExpression . '^' arithmeticExpression
   66                     | arithmeticExpression '^' arithmeticExpression .

    '^'  shift, and go to state 59

    $default  reduce using rule 66 (arithmeticExpression)


State 90

   13 planoFirstPoint: '<' arithmeticExpression . ',' arithmeticExpression '>'
   61 arithmeticExpression: arithmeticExpression . '+' arithmeticExpression
   62                     | arithmeticExpression . '-' arithmeticExpression
   63                     | arithmeticExpression . '*' arithmeticExpression
   64                     | arithmeticExpression . '/' arithmeticExpression
   65                     | arithmeticExpression . '%' arithmeticExpression
   66                     | arithmeticExpression . '^' arithmeticExpression

    '+'  shift, and go to state 54
    '-'  shift, and go to state 55
    '*'  shift, and go to state 56
    '/'  shift, and go to state 57
    '%'  shift, and go to state 58
    '^'  shift, and go to state 59
    ','  shift, and go to state 111


State 91

    7 plano: PLANO '=' '{' planoFirstPoint ',' . planoPoints '}' ';'

    VARIABLE  shift, and go to state 112
    '<'       shift, and go to state 113

    planoPoints  go to state 114
    planoPoint   go to state 115


State 92

   16 definition: DEFINITIONSENSOR VARIABLE sensorOrActuator VARIABLE ';' .

    $default  reduce using rule 16 (definition)


State 93

   14 definition: DEFINITIONSENSOR VARIABLE sensorOrActuator '<' ENTERO . ',' ENTERO '>' ';'

    ','  shift, and go to state 116


State 94

   17 definition: DEFINITIONACTUATOR VARIABLE sensorOrActuator VARIABLE ';' .

    $default  reduce using rule 17 (definition)


State 95

   15 definition: DEFINITIONACTUATOR VARIABLE sensorOrActuator '<' ENTERO . ',' ENTERO '>' ';'

    ','  shift, and go to state 117


State 96

   40 action: ACTIVATE VARIABLE . ENTERO
   41       | ACTIVATE VARIABLE .

    ENTERO  shift, and go to state 118

    $default  reduce using rule 41 (action)


State 97

   42 action: DESACTIVATE VARIABLE .

    $default  reduce using rule 42 (action)


State 98

   43 action: PAUSE ENTERO .

    $default  reduce using rule 43 (action)


State 99

   46 action: WRITE VARIABLE . text
   58 arithmeticExpression: VARIABLE .

    VARIABLE  shift, and go to state 29
    TEXT      shift, and go to state 100
    ENTERO    shift, and go to state 30
    REAL      shift, and go to state 31
    '-'       shift, and go to state 33
    '('       shift, and go to state 34

    '-'       [reduce using rule 58 (arithmeticExpression)]
    $default  reduce using rule 58 (arithmeticExpression)

    text                  go to state 119
    arithmeticExpression  go to state 103


State 100

   47 text: TEXT .

    $default  reduce using rule 47 (text)


State 101

   45 action: WRITE '<' . arithmeticExpression ',' arithmeticExpression '>' text

    VARIABLE  shift, and go to state 29
    ENTERO    shift, and go to state 30
    REAL      shift, and go to state 31
    '-'       shift, and go to state 33
    '('       shift, and go to state 34

    arithmeticExpression  go to state 120


State 102

   44 action: WRITE text .

    $default  reduce using rule 44 (action)


State 103

   48 text: arithmeticExpression .
   61 arithmeticExpression: arithmeticExpression . '+' arithmeticExpression
   62                     | arithmeticExpression . '-' arithmeticExpression
   63                     | arithmeticExpression . '*' arithmeticExpression
   64                     | arithmeticExpression . '/' arithmeticExpression
   65                     | arithmeticExpression . '%' arithmeticExpression
   66                     | arithmeticExpression . '^' arithmeticExpression

    '+'  shift, and go to state 54
    '-'  shift, and go to state 55
    '*'  shift, and go to state 56
    '/'  shift, and go to state 57
    '%'  shift, and go to state 58
    '^'  shift, and go to state 59

    $default  reduce using rule 48 (text)


State 104

   32 behaviour: IF condition . '[' behaviourZone ']' ';'
   33          | IF condition . '[' behaviourZone ']' _else '[' behaviourZone ']' ';'

    '['  shift, and go to state 121


State 105

   61 arithmeticExpression: arithmeticExpression . '+' arithmeticExpression
   62                     | arithmeticExpression . '-' arithmeticExpression
   63                     | arithmeticExpression . '*' arithmeticExpression
   64                     | arithmeticExpression . '/' arithmeticExpression
   65                     | arithmeticExpression . '%' arithmeticExpression
   66                     | arithmeticExpression . '^' arithmeticExpression
   67 logicExpression: arithmeticExpression . EQUALS arithmeticExpression
   68                | arithmeticExpression . NOTEQUALS arithmeticExpression
   69                | arithmeticExpression . GREATEROREQUAL arithmeticExpression
   70                | arithmeticExpression . LOWEROREQUAL arithmeticExpression
   71                | arithmeticExpression . '>' arithmeticExpression
   72                | arithmeticExpression . '<' arithmeticExpression

    EQUALS          shift, and go to state 122
    LOWEROREQUAL    shift, and go to state 123
    GREATEROREQUAL  shift, and go to state 124
    NOTEQUALS       shift, and go to state 125
    '<'             shift, and go to state 126
    '>'             shift, and go to state 127
    '+'             shift, and go to state 54
    '-'             shift, and go to state 55
    '*'             shift, and go to state 56
    '/'             shift, and go to state 57
    '%'             shift, and go to state 58
    '^'             shift, and go to state 59


State 106

   37 condition: logicExpression .

    $default  reduce using rule 37 (condition)


State 107

   38 repeat: ENTERO .

    $default  reduce using rule 38 (repeat)


State 108

   34 behaviour: _while repeat . '[' behaviourZone ']' ';'

    '['  shift, and go to state 128


State 109

   39 actions: action ';' .

    $default  reduce using rule 39 (actions)


State 110
